# primordial_pixels

./: Cargo.toml  README.md  config-example.json  config.json
main/: Cargo.toml
main/src/: camera.rs  consts.rs  main.rs  organism_logger.rs  physics_lock.rs  sandbox.rs  util.rs
main/src/assets/: handles.rs  mod.rs  plugin.rs
main/src/config/: config.rs  config_tag.rs  mod.rs  plugin.rs
main/src/performance_info/: plugin.rs
main/src/petri_dish/: mod.rs  plugin.rs  resource.rs
main/src/runner/: plugin.rs
main/src/save/: message.rs  mod.rs  plugin.rs  resource.rs  seed_packet.rs
main/src/util/: function.rs  mod.rs  ticker.rs
main/src/world/: matrix.rs  mod.rs  plugin.rs  world.rs
main/src/world/environment/: accessor_trait.rs  environment.rs  field.rs  layer.rs  layer_key.rs  layer_ticker.rs  layer_type.rs  mod.rs  plugin.rs
main/src/world/environment/display/: bundle.rs  component.rs  message.rs  mod.rs  plugin.rs  resource.rs
main/src/world/environment/layer/: convolve.rs  layer_key.rs  layer_type.rs  mod.rs  periodic_replenish_convolve.rs  replenish.rs  replenish_convolve.rs  test.rs
main/src/world/organism/: body.rs  brain.rs  chromosome.rs  component.rs  distribution.rs  joint.rs  message.rs  meta.rs  mod.rs  mutation.rs  node_type.rs  organism.rs  out_in.rs  plugin.rs  seed.rs  stats.rs  transput.rs  util_trait.rs
main/src/world/organism/component/: bone.rs  component.rs  egg.rs  joint.rs  mod.rs  muscle.rs  organism.rs
main/src/world/organism/mutation/: body.rs  brain.rs  mod.rs  mutation.rs  stats.rs
my_derive/: Cargo.toml
(+11 files in other folders)
