[workspace]
resolver = "2"
members = ["main", "my_derive"]

# Dev build settings
[profile.dev]
opt-level = 1
incremental = true
[profile.dev.package."*"]
opt-level = 3

# Release build settings
[profile.release] 
codegen-units = 1
lto = true
incremental = false
debug = false
[profile.release.package."*"]
opt-level = 3