[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
my_derive = { path = "../my_derive" }
avian2d = {version = "0.4", features = ["parallel", "simd"]}
bevy = "0.17.3"
chrono = "0.4.38"
uuid = "1.8.0"
rand = "0.9.2"
rand_distr = "0.5.1"
nalgebra = "0.34.1"
serde = "1.0.228"
serde_json = "1.0.149"
serde-big-array = "0.5.1"